Improved index.html

--- a/index.html
+++ b/index.html
@@ -1,19 +1,213 @@
----&#160;
----
-
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<title>Prostate Cancer Patient Decision Aid</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="assets/css/all.css">
-	<script type="text/javascript" src="assets/js/jquery-3.2.0.min.js"></script>
+	<title>PDA</title>
+	<link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+
+
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<script type="text/javascript" src="js/jquery-3.2.0.min.js"></script>
+	<script src="https://use.fontawesome.com/d24aa2ca90.js"></script>
+	<script type="text/javascript">
+		
+	</script>
 </head>
-<body>
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container-fluid">
+			<div class="navbar-header page-scroll">
+				<a class="navbar-brand page-scroll" href="#page-top">Patient Decision Aid</a>
+			</div>
+		<div>
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav navbar-right">
+				<li>
+					<a class="page-scroll" href="#overview">Overview</a>
+				</li>
+				<li>
+					<a class="page-scroll" href="#download">Download</a>
+				</li>
+				<li>
+					<a class="page-scroll" href="#contact">Contact Us</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+	<header>
+		<div class="header-content">
+			<div class="header-content-inner">
+				<h1 id="home-heading"> Making The Choice </h1>
+				<hr>
+				<p>Deciding What to Do about Early Stage Prostate Cancer</p>
+				<a href="#overview" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+			</div>
+		</div>
+	</header
+>	<section class="bg-primary" id="overview">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2 text-center">
+					<h2 class="section-heading">Overview</h2>
+					<hr class="light">
+					<p class="text-faded">Prostate cancer is a very differend kind of cancer. Most prostate cancers grow very slowly and do not cause problems especially for those with early stage prostate cancer. Thus you can take your time to decide on your treatment choices. There is no hurry to start the treatment immediately.</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="purpose">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h2 class="section-heading">What This Website Helps</h2>
+					<hr>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-3 col-md-6 text-center">
+					<div class="service-box">
+						<i class="fa fa-4x fa-question text-primary "></i>
+						<h3>Understand Your Disease</h3>
+						<p class="text-muted">Helps you understand medical facts about early stage prostate cancer</p>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6 text-center">
+					<div class="service-box">
+						<i class="fa fa-4x fa-medkit text-primary "></i>
+						<h3>Know Your Choices</h3>
+						<p class="text-muted">Provides facts about the disease, treatment choices, benefits and risks of each treatment</p>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6 text-center">
+					<div class="service-box">
+						<i class="fa fa-4x fa-puzzle-piece text-primary "></i>
+						<h3>Effective Decision Making</h3>
+						<p class="text-muted">Guide to have better treatment decision after discussing with your doctor</p>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6 text-center">
+					<div class="service-box">
+						<i class="fa fa-4x fa-heartbeat text-primary "></i>
+						<h3>Be Well Informed</h3>
+						<p class="text-muted">Even if you chooce to let the doctor decide, you will be well informed</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="no-padding" id="portfolio">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h2 class="section-heading">Treatments</h2>
+					<hr>
+				</div>
+			</div>
+		</div>
+        <div class="container-fluid">
+            <div class="row no-gutter popup-gallery">
+                <div class="col-lg-4 col-sm-6">
+                    <a href="img/observation.jpg" class="portfolio-box">
+                        <img src="img/observation.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Treatment Option
+                                </div>
+                                <div class="project-name">
+                                    Observation
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="img/tools.png" class="portfolio-box">
+                        <img src="img/tools.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Treatment Option
+                                </div>
+                                <div class="project-name">
+                                    Surgery
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="img/radiotherapy.jpg" class="portfolio-box">
+                        <img src="img/radiotherapy.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Treatment Option
+                                </div>
+                                <div class="project-name">
+                                    Radiotherapy
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+	</section>
+	<aside class="bg-dark" id="download">
+        <div class="container text-center">
+            <div class="call-to-action">
+                <h2>Download Early Prostate Cancer Decision Aid</h2>
+                <form method="get" action="include/PDA.pdf"><button class="btn btn-default btn-xl sr-button">Download</button></form>
+            </div>
+        </div>
+    </aside>
+	<section class="bg-primary" id="contact">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2 text-center">
+					<h2 class="section-heading">Have Inquiry?</h2>
+					<hr class="light">
+					<p class="text-faded-no-margin">Contact us at: </p>
+					<p><strong>03-89472538</strong></p>
+					<p><strong>pylee02@gmail.com</strong></p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="bg-footer" id="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2 text-center">
+					<h2 class="section-heading">Patient Decision Aid Project Collaborated By:</h2>
+					<div class="row">
+						<div class="col-lg-6 col-md-6 col-xs-6 text-center" style="margin-top: 20px">
+							<img src="img/UM-logo.png" alt="UM" >					
+						</div>
+						<div class="col-lg-6 col-md-6 col-xs-6 text-center" style="margin-top: 20px">
+							<img src="img/UPM-logo.png" alt="UPM" >
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
-{% include header.html %}
+	<!-- Bootstrap Core JavaScript -->
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dignissim euismod lorem et faucibus. Nulla sit amet molestie leo, vel dapibus lectus. Aenean euismod nisi non tempor maximus. Nam ultricies, nibh et interdum fermentum, lorem nisi ultricies enim, sit amet ultricies libero est nec neque. In laoreet fringilla quam at eleifend. In molestie condimentum arcu ut iaculis. Integer blandit interdum nunc eu congue. Integer vel aliquam nunc, nec pretium quam. Sed non ligula sit amet turpis gravida consectetur vel id felis.</p>
+	<!-- jQuery -->
+	<script type="text/javascript" src="js/jquery-3.2.0.min.js"></script>
+
+	<!-- Own js -->
+	<script type="text/javascript" src="js/scrolling-nav.js"></script>
+
+	<!-- Scrolling Nav js -->
+	<script type="text/javascript" src="js/jquery.easing.js"></script>
 </body>
 </html>
