Changed "Collaboration" placement
Collaboration section has been removed and the content has been moved to
the Contact Us section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script type="text/javascript" src="js/jquery-3.2.0.min.js"></script>
-	<script src="https://use.fontawesome.com/d24aa2ca90.js"></script>
+	<!-- <script src="https://use.fontawesome.com/d24aa2ca90.js"></script> -->
 	<script type="text/javascript">
 		
 	</script>
@@ -170,20 +170,14 @@
 	<section class="bg-primary" id="contact">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-8 col-lg-offset-2 text-center">
+				<div class="col-lg-6">
 					<h2 class="section-heading">Have Inquiry?</h2>
-					<hr class="light">
+					<hr class="footer-hr">
 					<p class="text-faded-no-margin">Contact us at: </p>
 					<p><strong>03-89472538</strong></p>
 					<p><strong>pylee02@gmail.com</strong></p>
 				</div>
-			</div>
-		</div>
-	</section>
-	<section class="bg-footer" id="footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-8 col-lg-offset-2 text-center">
+				<div class="col-lg-6 text-center">
 					<h2 class="section-heading">Patient Decision Aid Project Collaborated By:</h2>
 					<div class="row">
 						<div class="col-lg-6 col-md-6 col-xs-6 text-center" style="margin-top: 20px">
