--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script type="text/javascript" src="js/jquery-3.2.0.min.js"></script>
-	<!-- <script src="https://use.fontawesome.com/d24aa2ca90.js"></script> -->
+	<script src="https://use.fontawesome.com/d24aa2ca90.js"></script>
 	<script type="text/javascript">
 		
 	</script>
