Website Label Touchups
Changes some title and label names

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2 class="section-heading">What This Website Helps</h2>
+					<h2 class="section-heading">How This Website Helps</h2>
 					<hr>
 				</div>
 			</div>
@@ -104,7 +104,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2 class="section-heading">Treatments</h2>
+					<h2 class="section-heading">Treatment Options</h2>
 					<hr>
 				</div>
 			</div>
@@ -178,7 +178,7 @@
 					<p><strong>pylee02@gmail.com</strong></p>
 				</div>
 				<div class="col-lg-6 text-center">
-					<h2 class="section-heading">Patient Decision Aid Project Collaborated By:</h2>
+					<h2 class="section-heading">Project Collaboration Between:</h2>
 					<div class="row">
 						<div class="col-lg-6 col-md-6 col-xs-6 text-center" style="margin-top: 20px">
 							<img src="img/UM-logo.png" alt="UM" >					
