--- a/surgery.html
+++ b/surgery.html
@@ -24,6 +24,9 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
 				<li>
+					<a class="page-scroll" href="#home">Home</a>
+				</li>
+				<li>
 					<a class="page-scroll" href="#overview">Overview</a>
 				</li>
 				<li>
@@ -35,9 +38,6 @@
 			</ul>
 		</div>
 </nav>
-		
-<header>
-
 	<section class="no-padding" id="portfolio">
 		<div class="container">
 			<div class="row">
@@ -101,12 +101,11 @@
 			</div>
 		</div>
 	</section>
-
 <br/>
-		
-</header>
 
-	<section class="bg-primary" id="contact">
+
+
+		<section class="bg-primary navbar-fixed-bottom" id="contact">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6">
@@ -130,6 +129,7 @@
 			</div>
 		</div>
 	</section>
+	
 		
-		</body>
-		</html>
+</body>
+</html>
