--- a/surgery.html
+++ b/surgery.html
@@ -80,15 +80,65 @@
 						  <div id="menu1" class="tab-pane fade">
 						    <h3>Advantages</h3>
 						    <p><ul>
-						    	<li>Surgery can offer a cure if the cancer is removed completely.</li>
+						    	<li>Offer a cure if the cancer is removed completely.</li>
 						    </ul></p>
 						  </div>
 						  <div id="menu2" class="tab-pane fade">
 						    <h3>Disadvantages</h3>
 						    <p><ul>
 						    	<li>Sometimes not all cancer cells are removed.</li>
+						    	<ul><li>Need additional treatment such as radiation to remove remaining cancer cells.</li></ul>
 						    	<li>Complications of the surgery : </li>
-						    	<ul><li>Bleeding</li><li>Blood clots</li><li>Infection</li></ul>
+						    	<ul>
+						    	<li>Bleeding that require blood transfusion.</li>
+						    	<li>Blood clots in legs or lungs</li>
+						    	<li>Wound infection</li></ul>
+						    	<li>Problems of controlling urine</li>
+						    	<ul>
+						    	<li>Urine may leak when cough, sneeze, strain or change positions suddenly</li>
+						    	<li>May last up to several months</li>
+						    	<li>Don't need special treatment</li>
+						    	<li>92 of 100 men get better on their own if they had leaking of urine after surgery. The remaining does not get better</li>
+						    	<li>Can use pad to protect clothes</li>
+						    	<li>Or undergo special surgery to control leakage</li>
+						    	<li>Younger men have fewer problem controlling their urine</li>
+						    	</ul>
+						    	<li>Problem passing urine</li>
+						    	<ul>
+						    	<li>Passage of urine improves after surgery for most men</li>
+						    	<li>Sometimes, scars can be form inside urethra (known as urethral stricture)</li>
+						    	<ul>
+						    	<li>Occurs in 2-9 men of 100</li>
+						    	<li>Find hard to pass urine</li>
+						    	<li>Need procedure to unblock narrowing of urethra</li>
+						    	</ul>
+						    	</ul>
+						    	<li>Erection Problem Erectile Dysfunction,ED)</li>
+						    	<ul>
+						    	<li>Problem having an erection</li>
+						    	<li>Affect feeling about sex and yourself</li>
+						    	<ul>
+						    	<li>80 of 100 have long term ED, it depends on extent of the surgery</li>
+						    	</ul>
+						    	<li>The risk will be lowered if you : </li>
+						    	<ul>
+						    	<li>Have good erection before surgery</li>
+						    	<li>Have nerve-sparing surgery</li>
+						    	<li>Younger</li>
+						    	</ul>
+						    	<li>Can be treated with : </li>
+						    	<ul>
+						    	<li>Oral tablets</li>
+						    	<li>Vacuum devices</li>
+						    	<li>Injections</li>
+						    	<li>Penile implant</li>
+						    	</ul>
+						    	</ul>
+						    	<li>Risk of Death</li>
+						    	<ul>
+						    	<li>Very rare (may happen in 1-2 men of 1000!)</li>
+						    	</ul>
+
 						    </ul></p>
 						  </div>
 						  <div id="menu3" class="tab-pane fade">
@@ -104,6 +154,11 @@
 <br/>
 
 
+
+
+	
+		
+</body>
 
 		<section class="bg-primary navbar-fixed-bottom" id="contact">
 		<div class="container">
@@ -129,7 +184,4 @@
 			</div>
 		</div>
 	</section>
-	
-		
-</body>
 </html>
