--- a/surgery.html
+++ b/surgery.html
@@ -57,7 +57,6 @@
 				 <li class="active"><a data-toggle="tab" href="#home">Introduction</a></li>
 				 <li><a data-toggle="tab" href="#menu1">Advantages</a></li>
 				 <li><a data-toggle="tab" href="#menu2">Disadvantages</a></li>
-				 <li><a data-toggle="tab" href="#menu3">Statistics</a></li>
 				</ul>
 				<!-- TAB DETAILS-->
 					<div class="tab-content">
@@ -141,10 +140,6 @@
 
 						    </ul></p>
 						  </div>
-						  <div id="menu3" class="tab-pane fade">
-						    <h3>Menu 3</h3>
-						    <p>Some content in menu 3.</p>
-						</div>
 					</div>
 				</div>
 				
@@ -152,15 +147,8 @@
 		</div>
 	</section>
 <br/>
-
-
-
-
-	
-		
 </body>
-
-		<section class="bg-primary navbar-fixed-bottom" id="contact">
+		<section class="bg-primary" id="contact">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6">
