--- a/surgery.html
+++ b/surgery.html
@@ -71,7 +71,27 @@
 						    <li>The surgery can be performed in several ways :</li>
 							    <ul>
 							    <li>Open prostatectomy</li>
+							    <ul>
+							    <li>The prostate is removed through a single long cut made in the abdomen from a point below your belly button to just above the pubic bone.</li>
+							    </ul>
 							    <li>Laparoscopic / robotic surgery</li>
+							    <ul>
+							    <li>A laparoscope (a long slender tube with a light and camera on the end) is used to remove the prostate.</li>
+<li>Done through 4 to 6 small cuts in the belly button and the abdomen, instead of a single long cut in the abdomen (key hole surgery).</li>
+<li>A robot can be used to assist.</li>
+<li>Less pain, bleeding and require shorter hospital stay.</li>
+<li>The results of the surgery such as cancer control and long term complications are the same for either open or laparoscopic/robotic surgery.</li>
+<li>As long as your surgeon is experienced, the type of surgery (open or laparoscopic/robot) usually doesn’t matter.</li>
+<li>In some cases, the surgeon can do a “nerve-sparing” surgery to lower the chance of complications such as urinary incontinence or erection problem.</li>
+<li>“nerve-sparing” surgery cannot be done for some men when the nerve is too close to the cancer and the surgeon might have to remove the nerve to lower the chance of leaving the cancer behind.</li>
+<li>After the surgery</li>
+<ul>
+<li>A tube (catheter) will be left in your bladder to drain your urine for 1 to 2 weeks to help the wound heal</li>
+<li>You are advised to rest and avoid strenuous activities for 4-6 weeks before resuming your usual routine activities.</li>
+<li>You are advised to have a healthy diet and do appropriate physical activities. There is no special food restriction.</li>
+</ul>
+<li>The cost for open prostatectomy ranges from RM500-2,000 (in government hospitals) to RM20,000-25,000 (in private hospital)</li>
+							    </ul>
 							    </ul>
 						    </ul>
 						    </p>
@@ -148,6 +168,7 @@
 	</section>
 <br/>
 </body>
+<footer>
 		<section class="bg-primary" id="contact">
 		<div class="container">
 			<div class="row">
@@ -172,4 +193,5 @@
 			</div>
 		</div>
 	</section>
+</footer>
 </html>
