--- a/surgery.html
+++ b/surgery.html
@@ -96,7 +96,7 @@
 						    </ul>
 						    </p>
 						  </div>
-						  <div id="menu1" class="tab-pane fade">
+						  <div id="menu1" class="tab-pane fade" style="min-height:20%">
 						    <h3>Advantages</h3>
 						    <p><ul>
 						    	<li>Offer a cure if the cancer is removed completely.</li>
