--- a/surgery.html
+++ b/surgery.html
@@ -60,7 +60,7 @@
 				</ul>
 				<!-- TAB DETAILS-->
 					<div class="tab-content">
-						<div id="home" class="tab-pane fade in active">
+						<div id="home" class="tab-pane fade in active" style="min-height:50%">
 						    <h3>What do I need to know about surgery ?</h3>
 						    <p><ul>
 						    <li>Surgery is a treatment choice for men with earlystage prostate cancer who are in good health.</li>
@@ -96,13 +96,13 @@
 						    </ul>
 						    </p>
 						  </div>
-						  <div id="menu1" class="tab-pane fade" style="min-height:20%">
+						  <div id="menu1" class="tab-pane fade" style="min-height:50%">
 						    <h3>Advantages</h3>
 						    <p><ul>
 						    	<li>Offer a cure if the cancer is removed completely.</li>
 						    </ul></p>
 						  </div>
-						  <div id="menu2" class="tab-pane fade">
+						  <div id="menu2" class="tab-pane fade" style="min-height:50%">
 						    <h3>Disadvantages</h3>
 						    <p><ul>
 						    	<li>Sometimes not all cancer cells are removed.</li>
@@ -168,7 +168,7 @@
 	</section>
 <br/>
 </body>
-<footer>
+<footer style="position: absolute; bottom: 0; width : 100%; max-height: 20%">
 		<section class="bg-primary" id="contact">
 		<div class="container">
 			<div class="row">
