Restyle Surgery and Index

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>PDA</title>
+	<title>Prostate Cancer PDA</title>
 	<link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
@@ -20,13 +20,16 @@
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header page-scroll">
-				<a class="navbar-brand page-scroll" href="#page-top">Patient Decision Aid</a>
+				<a class="navbar-brand page-scroll" href="#page-top">Prostate Cancer PDA</a>
 			</div>
 		<div>
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
 				<li>
 					<a class="page-scroll" href="#overview">Overview</a>
+				</li>
+				<li>
+					<a class="page-scroll" href="#portfolio">Treatment Options</a>
 				</li>
 				<li>
 					<a class="page-scroll" href="#download">Download</a>
@@ -114,6 +117,7 @@
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/observation.jpg" class="portfolio-box">
                         <img src="img/observation.jpg" class="img-responsive" alt="">
+                        <figcaption>Observation</figcaption>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -127,8 +131,9 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/tools.png" class="portfolio-box">
+                    <a href="surgery.html" class="portfolio-box">
                         <img src="img/tools.png" class="img-responsive" alt="">
+                        <figcaption>Surgery</figcaption>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -144,6 +149,7 @@
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/radiotherapy.jpg" class="portfolio-box">
                         <img src="img/radiotherapy.jpg" class="img-responsive" alt="">
+                        <figcaption>Radiotherapy</figcaption>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -163,6 +169,8 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Download Early Prostate Cancer Decision Aid</h2>
+                <hr class="light">
+				<p class="text-faded">Wish to download a copy for offline reading? Please click the download button below. It's all for free!</p>
                 <form method="get" action="include/PDA.pdf"><button class="btn btn-default btn-xl sr-button">Download</button></form>
             </div>
         </div>
