--- a/surgery.html
+++ b/surgery.html
@@ -6,7 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -18,19 +18,19 @@
 <nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header page-scroll">
-				<a class="navbar-brand page-scroll" href="#page-top">Patient Decision Aid</a>
+				<a class="navbar-brand page-scroll" href="index.html">Prostate Cancer PDA</a>
 			</div>
 		<div>
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
 				<li>
-					<a class="page-scroll" href="#home">Home</a>
+					<a class="page-scroll" href="index.html">Home</a>
 				</li>
 				<li>
-					<a class="page-scroll" href="#overview">Overview</a>
+					<a class="page-scroll" href="index.html#portfolio">Treatment Options</a>
 				</li>
 				<li>
-					<a class="page-scroll" href="#download">Download</a>
+					<a class="page-scroll" href="index.html#download">Download</a>
 				</li>
 				<li>
 					<a class="page-scroll" href="#contact">Contact Us</a>
@@ -45,75 +45,87 @@
 				<br>
 					<h1 class="section-heading">Surgery</h1>
 					<ol class="breadcrumb">
-					  <li class="breadcrumb-item"><a href="#">Home</a></li>
-					  <li class="breadcrumb-item"><a href="#">Treatment</a></li>
+					  <li class="breadcrumb-item"><a href="page-top">Home</a></li>
+					  <li class="breadcrumb-item"><a href="index.html#portfolio">Treatment</a></li>
 					  <li class="breadcrumb-item active">Surgery</li>
 					</ol>
 				</div>
 			</div>
+		</div>
+		<div class="container">			
 			<div class="row">
-				<div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 text-left">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-left">
 				<ul class="nav nav-tabs" data-tabs="tab">
 				 <li class="active"><a data-toggle="tab" href="#home">Introduction</a></li>
-				 <li><a data-toggle="tab" href="#menu1">Advantages</a></li>
-				 <li><a data-toggle="tab" href="#menu2">Disadvantages</a></li>
+				 <li><a data-toggle="tab" href="#menu1">Types of Surgery</a></li>
+				 <li><a data-toggle="tab" href="#menu2">Advantages</a></li>
+				 <li><a data-toggle="tab" href="#menu3">Disadvantages</a></li>
 				</ul>
 				<!-- TAB DETAILS-->
 					<div class="tab-content">
 						<div id="home" class="tab-pane fade in active" style="min-height:50%">
 						    <h3>What do I need to know about surgery ?</h3>
-						    <p><ul>
-						    <li>Surgery is a treatment choice for men with earlystage prostate cancer who are in good health.</li>
-						    <li>You will be admitted to the hospital for one or more days.</li>
-						    <li>The entire prostate gland with the cancer in it will be removed during surgery.</li>
-						    <li>Sometimes, the doctor will also remove the lymph glands (nodes) next to the prostate.</li>
-						    <li>The surgery usually takes about 2 to 4 hours.</li>
-						    <li>The surgery can be performed in several ways :</li>
-							    <ul>
-							    <li>Open prostatectomy</li>
-							    <ul>
-							    <li>The prostate is removed through a single long cut made in the abdomen from a point below your belly button to just above the pubic bone.</li>
-							    </ul>
-							    <li>Laparoscopic / robotic surgery</li>
-							    <ul>
-							    <li>A laparoscope (a long slender tube with a light and camera on the end) is used to remove the prostate.</li>
-<li>Done through 4 to 6 small cuts in the belly button and the abdomen, instead of a single long cut in the abdomen (key hole surgery).</li>
-<li>A robot can be used to assist.</li>
-<li>Less pain, bleeding and require shorter hospital stay.</li>
-<li>The results of the surgery such as cancer control and long term complications are the same for either open or laparoscopic/robotic surgery.</li>
-<li>As long as your surgeon is experienced, the type of surgery (open or laparoscopic/robot) usually doesn’t matter.</li>
-<li>In some cases, the surgeon can do a “nerve-sparing” surgery to lower the chance of complications such as urinary incontinence or erection problem.</li>
-<li>“nerve-sparing” surgery cannot be done for some men when the nerve is too close to the cancer and the surgeon might have to remove the nerve to lower the chance of leaving the cancer behind.</li>
-<li>After the surgery</li>
-<ul>
-<li>A tube (catheter) will be left in your bladder to drain your urine for 1 to 2 weeks to help the wound heal</li>
-<li>You are advised to rest and avoid strenuous activities for 4-6 weeks before resuming your usual routine activities.</li>
-<li>You are advised to have a healthy diet and do appropriate physical activities. There is no special food restriction.</li>
-</ul>
-<li>The cost for open prostatectomy ranges from RM500-2,000 (in government hospitals) to RM20,000-25,000 (in private hospital)</li>
-							    </ul>
-							    </ul>
-						    </ul>
-						    </p>
+						    <dl>
+								<dt><font>Suitable For</font></dt>
+								<dd>Early-stage patient in good health</dd>
+								<dt>Admission Duration</dt>
+								<dd>One or more days</dt>
+								<dt>Outcome</dt>
+								<dd>Entire prostate gland will be removed, sometimes lymph gland (nodes) will also be removed.</dt>
+								<dt>Surgery Duration</dt>
+								<dd>Usually takes about 2 to 4 hours</dt>
+							</dl>						  
 						  </div>
 						  <div id="menu1" class="tab-pane fade" style="min-height:50%">
-						    <h3>Advantages</h3>
-						    <p><ul>
-						    	<li>Offer a cure if the cancer is removed completely.</li>
-						    </ul></p>
+						    <h3>Open Prostatectomy</h3>
+						    <dl>
+						    	<dt>Procedure</dt>
+						    	<dd>Prostate is removed through a single long cut made in the abdomen from a point below the belly button to just above the pubic bone.</dd>
+						    	<dt>Cost</dt>
+						    	<dd><ul><li>Government Hospital: RM500 - 2,000</li><li>Private Hospital: RM20,000 - 25,000</li></ul></dd>
+						    </dl>
+						    <h3>Laparoscopic/ Robotic Surgery</h3>
+						    <dl>
+						    	<dt>Procedure</dt>
+						    	<dd>A laparoscope is used to remove the prostate. This surgery is done through 4 to 6 small cuts in the belly button and the abdomen.</dd>
+						    	<dt>Cost</dt>
+						    	<dd>Please refer to your doctor.</dd>
+						    </dl>
+						    <h3>Comparison between Open Prostatectomy and Laparoscopic</h3>
+						    <dl>
+						    	<dt>Similarities</dt>
+						    	<dd><ul><li>Result of surgery are the same</li><li>Type of surgery doesn't matter as long as the surgeon is experienced</li></ul></dd>
+						    	<dt>Differences</dt>
+						    	<dd><ul><li>Laparoscopic may cause less pain, bleeding and require shorter hospital stay</li></ul></dd>
+						    </dl>
+						    <h3>Post-surgery care</h3>
+						    <dl>
+						    	<dt>Urination Aid</dt>
+						    	<dd><ul><li>A tube(catheter) will be left in the bladder to drain the urine</li><li>It will be there for 1-2 weeks to help the wound heal</li></ul></dd>
+						    	<dt>Rest</dt>
+						    	<dd><ul><li>You are advised to rest and avoid strenuous activities for 4-6 weeks before resuming your routine activities</li></ul></dd>
+						    	<dt>Diet</dt>
+						    	<dd><ul><li>Advised to have a healthy diet</li><li>Advised to do appropriate physical activities</li><li>No special food restriction</li></ul></dd>
+						    </dl>
 						  </div>
 						  <div id="menu2" class="tab-pane fade" style="min-height:50%">
-						    <h3>Disadvantages</h3>
+						    <h3>Advantages</h3>
 						    <p><ul>
-						    	<li>Sometimes not all cancer cells are removed.</li>
-						    	<ul><li>Need additional treatment such as radiation to remove remaining cancer cells.</li></ul>
-						    	<li>Complications of the surgery : </li>
-						    	<ul>
+						    	<li>Offers a cure if the cancer is removed completely.</li>
+						    </ul></p>
+						  </div>
+						  <div id="menu3" class="tab-pane fade" style="min-height:50%">
+						    <h3>Disadvantages</h3>
+						    <dl>
+						    	<dt>Sometimes not all cancer cells are removed.</dt>
+						    	<dd><ul><li>Need additional treatment such as radiation to remove remaining cancer cells.</li></ul></dd>
+						    	<dt>Complications of the surgery : </dt>
+						    	<dd><ul>
 						    	<li>Bleeding that require blood transfusion.</li>
 						    	<li>Blood clots in legs or lungs</li>
-						    	<li>Wound infection</li></ul>
-						    	<li>Problems of controlling urine</li>
-						    	<ul>
+						    	<li>Wound infection</li></ul></dd>
+						    	<dt>Problems of controlling urine</dt>
+						    	<dd><ul>
 						    	<li>Urine may leak when cough, sneeze, strain or change positions suddenly</li>
 						    	<li>May last up to several months</li>
 						    	<li>Don't need special treatment</li>
@@ -121,9 +133,9 @@
 						    	<li>Can use pad to protect clothes</li>
 						    	<li>Or undergo special surgery to control leakage</li>
 						    	<li>Younger men have fewer problem controlling their urine</li>
-						    	</ul>
-						    	<li>Problem passing urine</li>
-						    	<ul>
+						    	</ul></dd>
+						    	<dt>Problem passing urine</dt>
+						    	<dd><ul>
 						    	<li>Passage of urine improves after surgery for most men</li>
 						    	<li>Sometimes, scars can be form inside urethra (known as urethral stricture)</li>
 						    	<ul>
@@ -131,9 +143,9 @@
 						    	<li>Find hard to pass urine</li>
 						    	<li>Need procedure to unblock narrowing of urethra</li>
 						    	</ul>
-						    	</ul>
-						    	<li>Erection Problem Erectile Dysfunction,ED)</li>
-						    	<ul>
+						    	</ul></dd>
+						    	<dt>Erection Problem Erectile Dysfunction,ED)</dt>
+						    	<dd><ul>
 						    	<li>Problem having an erection</li>
 						    	<li>Affect feeling about sex and yourself</li>
 						    	<ul>
@@ -152,13 +164,12 @@
 						    	<li>Injections</li>
 						    	<li>Penile implant</li>
 						    	</ul>
-						    	</ul>
-						    	<li>Risk of Death</li>
-						    	<ul>
+						    	</ul></dd>
+						    	<dt>Risk of Death</dt>
+						    	<dd><ul>
 						    	<li>Very rare (may happen in 1-2 men of 1000!)</li>
-						    	</ul>
-
-						    </ul></p>
+						    	</ul></dd>
+						    </dl>
 						  </div>
 					</div>
 				</div>
@@ -167,8 +178,7 @@
 		</div>
 	</section>
 <br/>
-</body>
-<footer style="position: absolute; bottom: 0; width : 100%; max-height: 20%">
+<footer style="bottom: 0; width : 100%; max-height: 10%">
 		<section class="bg-primary" id="contact">
 		<div class="container">
 			<div class="row">
@@ -194,4 +204,19 @@
 		</div>
 	</section>
 </footer>
+
+<!-- Bootstrap Core JavaScript -->
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+
+	<!-- jQuery -->
+	<script type="text/javascript" src="js/jquery-3.2.0.min.js"></script>
+
+	<!-- Own js -->
+	<script type="text/javascript" src="js/scrolling-nav.js"></script>
+
+	<!-- Scrolling Nav js -->
+	<script type="text/javascript" src="js/jquery.easing.js"></script>
+
+</body>
+
 </html>
