--- a/surgery.html
+++ b/surgery.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/d24aa2ca90.js"></script>
 </head>
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" class="treatment-bg">
 <nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header page-scroll">
@@ -39,16 +39,18 @@
 		</div>
 </nav>
 	<section class="no-padding" id="portfolio">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-3 text-left">
-				<br>
-					<h1 class="section-heading">Surgery</h1>
-					<ol class="breadcrumb">
-					  <li class="breadcrumb-item"><a href="page-top">Home</a></li>
-					  <li class="breadcrumb-item"><a href="index.html#portfolio">Treatment</a></li>
-					  <li class="breadcrumb-item active">Surgery</li>
-					</ol>
+		<div class="treatment-header">
+			<div class="container ">
+				<div class="row">
+					<div class="col-lg-3 text-left">
+					<br>
+						<h1 class="section-heading">Surgery</h1>
+						<ol class="breadcrumb">
+						  <li class="breadcrumb-item"><a href="page-top">Home</a></li>
+						  <li class="breadcrumb-item"><a href="index.html#portfolio">Treatment</a></li>
+						  <li class="breadcrumb-item active">Surgery</li>
+						</ol>
+					</div>
 				</div>
 			</div>
 		</div>
