--- a/radiotherapy.html
+++ b/radiotherapy.html
@@ -151,20 +151,62 @@
 						  <div id="menu3" class="tab-pane fade" style="min-height:50%">
 						    <h3>Disadvantages</h3>
 						    <dl>
-						    	<dt>Feel worried or anxious</dt>
-						    	<dd><ul><li>You may feel worried or anxious about living with cancer and putting off the treatment.</li></ul></dd>
-						    	<dt>Follow up</dt>
+						    	<dt>Radiation may not kill all cancer cells.</dt>
+						    	<dd><ul><li>If radiotherapy does not cure your cancer,surgery may be necessary.However surgery may be more difficult because of scarring around the prostate after radiotherapy.</li></ul></dd>
+						    	<dt>Regular follow up</dt>
 						    	<dd><ul>
-						    	<li>The cancer needs to be followed closely.</li>
+						    	<li>You will be seen regularly by your oncologists during radiotherapy to monitor for and treat side effects that usually will occur two weeks after starting EBRT.</li>
 						    	</ul></dd>
-						    	<dt>Time consumption</dt>
+						    	<dt>Temporary Side effects</dt>
 						    	<dd><ul>
-						    	<li>Patient need to go for blood tests and biopsies more frequently (in case of active surveillance)</li>
+						    	<li>Tiredness</li>
+						    	<li>Mild skin redness and dryness</li>
+						    	<li>Urinary symptoms<ul>
+						    		<li>Passing urine frequently</li>
+						    		<li>Urine leakage when feeling of urinate</li>
+						    		<li>Weak stream</li>
+						    		<li>Painful urination</li>
+						    		<li>Blood in the urine</li>
+						    		<li>Leaking of urine</li>
+						    	</ul></li>
+						    	<li>Bowel symptoms<ul>
+						    		<li>Diarrhoea</li>
+						    		<li>Urgency</li>
+						    		<li>Painful passing motion</li>
+						    		<li>Blood in stool</li>
+						    	</ul></li>
+						    	<li>Discomfort in abdomen</li>
 						    	</ul></dd>
-						    	<dt>Cancer may spread</dt>
-						    	<dd><ul>
-						    	<li>The cancer may spread and become harder to treat. However, the chance is low if the prostate cancer risk of progression is low.</li>
-						    	</ul></dd>
+						    	<dt>Permanent Side Effects</dt>
+						    	<dd>
+						    	<div class="table-hover table-responsive table-striped">
+						    	<table class="table">
+						    	<thead>
+						    		<th>Radiotherapy Type</th>
+						    		<th>Problems passing urine</th>
+						    		<th>Change in bowel habit</th>
+						    		<th>Erection problem</th>
+						    		<th>Risk of bladder and rectal cancer</th>
+						    	</thead>
+						    	<tbody>
+						    		<tr>
+						    		<td>EBRT</td>
+						    		<td>11 out of 100 men</td>
+						    		<td>11 out of 100 men</td>
+						    		<td>35 to 45 out of 100 men</td>
+						    		<td>160 out of 100,000 men</td>
+						    		</tr>
+						    		<tr>
+						    		<td>Brachytherapy</td>
+						    		<td>16 out of 100 men</td>
+						    		<td>8 out of 100 men</td>
+						    		<td>35 to 45 out of 100 men</td>
+						    		<td>160 out of 100,000 men</td>
+						    		</tr>
+						    	</tbody>
+						    	</table>
+						    	</div>
+						    	</dd>
 						    </dl>
 						  </div>
 					</div>
