--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/observation.jpg" class="portfolio-box">
+                    <a href="observation.html" class="portfolio-box">
                         <img src="img/observation.jpg" class="img-responsive" alt="">
                         <figcaption>Observation</figcaption>
                         <div class="portfolio-box-caption">
@@ -147,7 +147,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/radiotherapy.jpg" class="portfolio-box">
+                    <a href="radiotherapy.html" class="portfolio-box">
                         <img src="img/radiotherapy.jpg" class="img-responsive" alt="">
                         <figcaption>Radiotherapy</figcaption>
                         <div class="portfolio-box-caption">
